--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
             <br>
 
             <section>
-                <h1 class="Contact">Motivation</h1>
+                <h1 class="Contact">Stimulate</h1>
+                I have always believed in my role as an individual in society and
+                 that I should explore all the energy stored within me and use it for the benefit of society,
+                  and I have always had a passion for entering the world of programming.
+                   I would like to participate in this training so that it broadens my horizons in a field 
+                   I have always loved, and gives me a great opportunity to participate more in the labor market and to get 
+                   a job opportunity and reach as many of my ambitions as possible. As far as possible in the programming world.
+                    Also, my entry into the academy will give me a strong opportunity to get to know and connect with my fellow programmers
+                     and designers and maintain relationships so that we will have a joint business soon.
 
                 <p>
                  
@@ -85,10 +93,7 @@
                     <i class="ri-code-box-fill"></i>
                     <span>CodeWars</span>
                 </a>
-                <a href="https://www.codewars.com/users/shathaaminKhalafallha" target="_blank" class="link">
-                    <i class="ri-code-box-fille"></i>
-                    <span>Email</span>
-                </a>
+              
 
 
 
